--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
   font-family: "Raleway", sans-serif !important;
   overflow-y: none;
-  width: 100%;
-  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -341,6 +338,24 @@ header .navigation li:last-child .button {
   line-height: 50px;
   text-transform: uppercase;
 }
+header .navigation li:last-child .button.active {
+  background: #3fbea9;
+  color: #fff;
+  height: 30px;
+  line-height: 30px;
+  text-transform: inherit;
+  width: 150px;
+}
+header .navigation li:last-child .button:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -15px;
+  width: 1px;
+  height: 30px;
+  background: #3fbea9;
+}
 
 .banner-home {
   position: relative;
@@ -403,6 +418,7 @@ header .navigation li:last-child .button {
 }
 .utility-home-1 .content .utilities-list li .details .short-description {
   margin-top: 10px;
+  max-height: 75px;
 }
 .utility-home-1 .image-box {
   width: 40%;
@@ -419,11 +435,13 @@ header .navigation li:last-child .button {
   position: relative;
   padding: 0px 274px 0px 275px;
   margin-top: 70px;
+  overflow: hidden;
 }
 .utility-home-2 > img {
   position: absolute;
   width: 300px;
   height: 300px;
+  z-index: -1;
 }
 .utility-home-2 > img:nth-child(1) {
   top: 50px;
@@ -446,6 +464,9 @@ header .navigation li:last-child .button {
 }
 .utility-home-2 .content {
   width: 48.4%;
+}
+.utility-home-2 .content .title-type-2.res {
+  display: none;
 }
 .utility-home-2 .content .utilities-list li {
   position: relative;
@@ -471,6 +492,7 @@ header .navigation li:last-child .button {
 }
 .utility-home-2 .content .utilities-list li .details .short-description {
   margin-top: 10px;
+  max-height: 75px;
 }
 
 .price-list {
@@ -479,11 +501,32 @@ header .navigation li:last-child .button {
   padding-top: 40px;
   padding-right: 74px;
   padding-bottom: 70px;
-  background: #304770;
   height: 690px;
+}
+.price-list > img {
+  position: absolute;
+  top: -20px;
+  width: 51%;
+  height: calc(100% + 20px);
+  z-index: 1;
+}
+.price-list > img:nth-child(1) {
+  left: 0;
+}
+.price-list > img:nth-child(2) {
+  right: 0;
+}
+.price-list .button {
+  margin-top: 30px;
+  width: 170px;
+  text-transform: uppercase;
+  line-height: 50px;
+  box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.15);
+  z-index: 2;
 }
 .price-list > .content {
   width: 29%;
+  z-index: 2;
 }
 .price-list > .content .title-type-1 {
   color: #fff;
@@ -498,16 +541,10 @@ header .navigation li:last-child .button {
   margin-top: 20px;
   color: #fff;
 }
-.price-list > .content .button {
-  margin-top: 30px;
-  width: 170px;
-  text-transform: uppercase;
-  line-height: 50px;
-  box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.15);
-}
 .price-list .price-list-box {
   width: 68.5%;
   height: 580px;
+  z-index: 2;
 }
 .price-list .price-list-box .price-box {
   width: 31%;
@@ -579,29 +616,19 @@ header .navigation li:last-child .button {
 .price-list .price-list-box .price-box:nth-child(3) .content .short-description {
   color: #bc74a5;
 }
+.price-list .button.res {
+  display: none;
+}
 
 .price-list::after {
   content: "";
   position: absolute;
-  top: -20px;
-  left: -10px;
-  width: 60%;
-  height: 60px;
-  background: #304770;
-  transform: rotateZ(3deg);
-  z-index: -1;
-}
-
-.price-list::before {
-  content: "";
-  position: absolute;
-  top: -20px;
-  right: -10px;
-  width: 60%;
-  height: 60px;
-  background: #304770;
-  transform: rotateZ(-3deg);
-  z-index: -1;
+  bottom: 0;
+  left: 0px;
+  width: 100%;
+  height: 50%;
+  background: #e5e5e5;
+  z-index: -2;
 }
 
 .evaluate-home {
@@ -609,19 +636,19 @@ header .navigation li:last-child .button {
   background: #e5e5e5;
 }
 .evaluate-home .evaluate-box {
-  width: 57%;
+  width: 59%;
 }
 .evaluate-home .evaluate-box .evaluate {
   width: 48%;
   align-items: flex-start;
 }
 .evaluate-home .evaluate-box .evaluate .image-box {
-  width: 47%;
+  width: 48%;
 }
 .evaluate-home .evaluate-box .evaluate .image-box .person {
   position: relative;
   width: 100%;
-  height: 170px;
+  height: 160px;
   margin-bottom: 45px;
 }
 .evaluate-home .evaluate-box .evaluate .image-box .person img:nth-child(1) {
@@ -648,7 +675,7 @@ header .navigation li:last-child .button {
   margin-top: 10px;
 }
 .evaluate-home .evaluate-box .evaluate .content {
-  width: 47%;
+  width: 48%;
   height: 310px;
   position: relative;
 }
@@ -656,7 +683,7 @@ header .navigation li:last-child .button {
   position: relative;
   top: 20px;
   width: 100%;
-  height: 275px;
+  height: 300px;
 }
 .evaluate-home .evaluate-box .evaluate .content img:nth-child(2) {
   position: absolute;
@@ -665,7 +692,7 @@ header .navigation li:last-child .button {
 }
 .evaluate-home .evaluate-box .evaluate .content img:nth-child(3) {
   position: absolute;
-  bottom: 0;
+  bottom: -20px;
   right: 0;
   transform: rotateZ(180deg);
 }
@@ -676,10 +703,10 @@ header .navigation li:last-child .button {
 }
 .evaluate-home > .image-box img {
   position: absolute;
-  top: 0;
+  top: -20px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% + 20px);
 }
 .evaluate-home > .image-box .title-type-1 {
   display: block;
@@ -759,7 +786,7 @@ header .navigation li:last-child .button {
   margin-top: 20px;
   font-size: 18px;
   line-height: 30px;
-  height: 60px;
+  max-height: 60px;
 }
 .articles-home .article .content .short-description,
 .articles-page .article .content .short-description {
@@ -768,6 +795,10 @@ header .navigation li:last-child .button {
 .articles-home .article.active,
 .articles-page .article.active {
   margin-right: 0;
+}
+.articles-home > a,
+.articles-page > a {
+  display: none;
 }
 
 .articles-page {
@@ -849,20 +880,20 @@ footer .logo-footer {
   align-items: flex-start;
   justify-content: flex-start;
 }
-footer .logo-footer .sign-up-footer {
+footer .logo-footer .sign-up-footer-2 {
   margin-top: 30px;
 }
-footer .logo-footer .sign-up-footer p {
+footer .logo-footer .sign-up-footer-2 p {
   line-height: 16px;
 }
-footer .logo-footer .sign-up-footer form {
+footer .logo-footer .sign-up-footer-2 form {
   position: relative;
   margin-top: 20px;
   height: 40px;
   background: #efefef;
   padding: 0px 10px 0px 20px;
 }
-footer .logo-footer .sign-up-footer form input {
+footer .logo-footer .sign-up-footer-2 form input {
   height: 40px;
   border: none;
   outline: none;
@@ -962,13 +993,20 @@ footer .reserved-box p:nth-child(1) a {
   height: 720px;
   justify-content: flex-end;
 }
-.banner-utilities-page > img {
+.banner-utilities-page .img-banner {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+.banner-utilities-page .img-banner img {
+  width: 100%;
+  height: 100%;
+}
+.banner-utilities-page .img-banner .title-type-1.res {
+  display: none;
 }
 .banner-utilities-page .content {
   width: 42%;
@@ -1082,6 +1120,9 @@ footer .reserved-box p:nth-child(1) a {
   flex-direction: column;
   height: 100%;
 }
+.price-list.page > img {
+  display: none;
+}
 .price-list.page > .content {
   width: 50%;
   text-align: center;
@@ -1147,7 +1188,7 @@ footer .reserved-box p:nth-child(1) a {
   width: 370px;
   height: 100%;
   background: #3fbea9;
-  padding: 0px 20px;
+  padding: 0px 20px 40px;
 }
 .contact-page .content .title-type-1 {
   color: #fff;
@@ -1156,7 +1197,7 @@ footer .reserved-box p:nth-child(1) a {
 .contact-page .content > .short-description {
   margin-top: 10px;
   color: #fff;
-  height: 150px;
+  max-height: 150px;
 }
 .contact-page .contact-details {
   margin-top: 30px;
@@ -1180,7 +1221,6 @@ footer .reserved-box p:nth-child(1) a {
   padding-top: 120px;
   padding-bottom: 50px;
   align-items: flex-start;
-  min-height: 100vh;
 }
 .article-details-page .details {
   width: 65.5%;
