--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,823 @@
+@media (max-width: 1920px) {
+  .padding {
+    padding-right: 374.5px;
+    padding-left: 375.5px;
+  }
 
+  .evaluate-home {
+    padding-right: 0px;
+  }
+
+  .sign-in-page {
+    padding-top: 150px;
+    justify-content: flex-start;
+  }
+  .sign-in-page form {
+    padding-top: 100px;
+  }
+  .sign-in-page > p {
+    position: absolute;
+    bottom: 30px;
+  }
+}
+@media (max-width: 1680px) {
+  .padding {
+    padding-right: 254.5px;
+    padding-left: 255.5px;
+  }
+
+  .evaluate-home {
+    padding-right: 0px;
+  }
+}
+@media (max-width: 1550px) {
+  .padding {
+    padding-right: 174px;
+    padding-left: 175px;
+  }
+
+  .evaluate-home {
+    padding-right: 0px;
+  }
+
+  .sign-in-page {
+    padding-top: 150px;
+    justify-content: space-between;
+  }
+  .sign-in-page form {
+    padding-top: 50px;
+  }
+  .sign-in-page > p {
+    position: initial;
+  }
+}
+@media (max-width: 1440px) {
+  .padding {
+    padding-right: 134.5px;
+    padding-left: 135.5px;
+  }
+
+  .evaluate-home {
+    padding-right: 0px;
+  }
+}
+@media (max-width: 1024px) {
+  .padding {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
+  .evaluate-home {
+    padding-right: 0px;
+  }
+
+  header .navigation li {
+    margin-left: 30px;
+  }
+  header .navigation li:last-child a {
+    margin-left: 30px;
+  }
+  header .navigation li:last-child .button {
+    margin-left: 30px;
+  }
+  header .navigation li:last-child .button:after {
+    left: -15px;
+  }
+
+  footer .sign-up-footer form div input {
+    padding-left: 80px;
+  }
+  footer .categories {
+    width: 12%;
+  }
+
+  .price-list {
+    height: 800px;
+  }
+  .price-list .price-list-box {
+    height: 700px;
+  }
+
+  .price-list.page .price-list-box {
+    height: 580px;
+  }
+
+  .sign-in-page {
+    justify-content: center;
+  }
+  .sign-in-page form {
+    padding-top: 100px;
+  }
+  .sign-in-page > p {
+    position: fixed;
+    bottom: 30px;
+  }
+}
+@media (max-width: 823px) {
+  .sign-in-page form {
+    padding-top: 50px;
+  }
+  .sign-in-page > p {
+    position: initial;
+  }
+}
+@media (max-width: 768px) {
+  .title-type-1 {
+    font-size: 18px;
+  }
+
+  .padding {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  header {
+    height: 70px;
+  }
+  header .header-logo {
+    z-index: 150;
+  }
+  header .user-res {
+    display: initial;
+  }
+  header .user-res img:nth-child(2) {
+    margin-left: 20px;
+    cursor: pointer;
+  }
+  header .navigation {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    min-height: 100vh;
+    background: #fff;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-top: 144px;
+    transition: 0.3s;
+    z-index: 140;
+  }
+  header .navigation .close-nav {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    z-index: 150;
+  }
+  header .navigation .close-nav::after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #3fbea9;
+    transform: rotate(45deg);
+  }
+  header .navigation .close-nav::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #3fbea9;
+    transform: rotate(-45deg);
+  }
+  header .navigation li {
+    margin-left: 100px;
+    margin-bottom: 20px;
+  }
+  header .navigation li a {
+    text-transform: uppercase;
+  }
+  header .navigation li:last-child {
+    margin-left: 100px;
+  }
+  header .navigation li:last-child .user {
+    display: none;
+  }
+  header .navigation li:last-child .sign-out {
+    display: initial;
+    margin-left: 0px;
+  }
+  header .navigation li:last-child a {
+    margin-left: 10px;
+  }
+  header .navigation li:last-child .button {
+    margin-left: 40px;
+    display: none;
+  }
+  header .navigation li:last-child .button:after {
+    display: none;
+  }
+  header .navigation.active {
+    left: 0%;
+  }
+
+  .banner-home .content {
+    width: 100%;
+  }
+  .banner-home .content .title-type-1 {
+    font-size: 80px;
+    line-height: 100px;
+  }
+
+  .utility-home-1 {
+    flex-direction: column;
+  }
+  .utility-home-1 .content {
+    width: 100%;
+  }
+  .utility-home-1 .content .title-type-1 {
+    text-align: center;
+  }
+  .utility-home-1 .content .line {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .utility-home-1 .content .utilities-list li .details .short-description {
+    max-height: 100px;
+  }
+  .utility-home-1 .image-box {
+    width: 100%;
+  }
+
+  .utility-home-2 > img {
+    display: none;
+  }
+  .utility-home-2 .image-box {
+    display: none;
+  }
+  .utility-home-2 .content {
+    width: 100%;
+  }
+  .utility-home-2 .content .title-type-2.res {
+    display: block;
+    text-align: center;
+    text-transform: uppercase;
+    color: #1175bb;
+  }
+  .utility-home-2 .content .utilities-list {
+    margin-top: 50px;
+  }
+  .utility-home-2 .content .utilities-list li {
+    align-items: flex-start;
+    padding-top: 30px;
+  }
+  .utility-home-2 .content .utilities-list li .img {
+    display: none;
+  }
+
+  .price-list {
+    flex-direction: column;
+    height: 100%;
+  }
+  .price-list > .content {
+    width: 100%;
+  }
+  .price-list > .content .title-type-1 {
+    display: none;
+  }
+  .price-list > .content .title-type-2 {
+    text-align: center;
+  }
+  .price-list > .content .line {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .price-list > .content .button {
+    display: none;
+  }
+  .price-list .price-list-box {
+    width: 100%;
+    height: 500px;
+    margin-top: 30px;
+  }
+  .price-list .price-list-box .price-box {
+    width: 100%;
+  }
+  .price-list .price-list-box .price-box:nth-child(1), .price-list .price-list-box .price-box:nth-child(2) {
+    display: none;
+  }
+  .price-list .price-list-box .price-box .content {
+    top: 0;
+    left: 0;
+  }
+  .price-list .price-list-box .price-box .list {
+    padding-top: 20px;
+  }
+  .price-list .button.res {
+    display: initial;
+  }
+
+  .evaluate-home {
+    position: relative;
+  }
+  .evaluate-home .evaluate-box {
+    width: 100%;
+  }
+  .evaluate-home .evaluate-box .evaluate {
+    padding-top: 30px;
+    padding-bottom: 50px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .evaluate-home .evaluate-box .evaluate .image-box {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .evaluate-home .evaluate-box .evaluate .image-box .person {
+    width: 130px;
+    height: 130px;
+    margin-bottom: 30px;
+  }
+  .evaluate-home .evaluate-box .evaluate .image-box .person img:nth-child(2) {
+    width: 40px;
+    height: 40px;
+    bottom: -20px;
+  }
+  .evaluate-home .evaluate-box .evaluate .image-box .ki {
+    width: 85px;
+    height: 45px;
+  }
+  .evaluate-home .evaluate-box .evaluate .content {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 50px;
+  }
+  .evaluate-home .evaluate-box .evaluate .content .short-description {
+    height: 100%;
+  }
+  .evaluate-home .evaluate-box .evaluate .content img:nth-child(3) {
+    bottom: 20px;
+  }
+  .evaluate-home .evaluate-box .evaluate:nth-child(2) {
+    display: none;
+  }
+  .evaluate-home > .image-box {
+    display: none;
+  }
+
+  .articles-home .article,
+.articles-page .article {
+    width: 100%;
+    margin-bottom: 30px;
+    margin-right: 0px;
+  }
+  .articles-home > a,
+.articles-page > a {
+    width: 100%;
+    display: block;
+    text-align: center;
+    color: #000;
+    line-height: 17px;
+    text-decoration: underline;
+    font-weight: bold;
+  }
+
+  .articles-page {
+    margin-top: 100px;
+  }
+  .articles-page > .title-type-1 {
+    font-size: 18px;
+    line-height: 36px;
+    padding-bottom: 30px;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 100%;
+    margin-bottom: 0px;
+    padding-top: 0px;
+  }
+  footer .sign-up-footer {
+    margin-bottom: 50px;
+    height: 360px;
+    padding: 30px 0px;
+  }
+  footer .sign-up-footer > img {
+    height: 360px;
+  }
+  footer .sign-up-footer .content,
+footer .sign-up-footer form {
+    width: 100%;
+  }
+  footer .sign-up-footer .content {
+    text-align: center;
+  }
+  footer .sign-up-footer form {
+    flex-direction: column;
+  }
+  footer .sign-up-footer form div {
+    flex-direction: column;
+    width: 100%;
+  }
+  footer .sign-up-footer form div input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  footer .sign-up-footer form input[type=submit] {
+    width: 100%;
+  }
+  footer .logo-footer {
+    width: 100%;
+    height: 100%;
+    margin-top: 0px;
+  }
+  footer .logo-footer .sign-up-footer-2 {
+    width: 100%;
+    height: 100%;
+  }
+  footer .contact-footer.active {
+    display: initial;
+    height: 100%;
+  }
+  footer .categories,
+footer .articles-footer,
+footer .contact-footer.active {
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+  }
+  footer .contact-footer {
+    display: none;
+  }
+  footer .reserved-box {
+    margin-top: 40px;
+  }
+  footer .reserved-box p:nth-child(2) {
+    display: none;
+  }
+
+  .banner-utilities-page .content {
+    width: 50%;
+  }
+
+  .utilities-page-1 .utility {
+    flex-direction: column-reverse;
+  }
+  .utilities-page-1 .utility .content {
+    width: 100%;
+    text-align: center;
+  }
+  .utilities-page-1 .utility .content .title-type-1 {
+    line-height: 36px;
+  }
+  .utilities-page-1 .utility .content .line {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .utilities-page-1 .utility .content .button-utilities-page {
+    display: none;
+  }
+  .utilities-page-1 .utility .image-box {
+    margin-bottom: 30px;
+    height: 300px;
+  }
+  .utilities-page-1 .utility.active {
+    flex-direction: column-reverse;
+  }
+  .utilities-page-1 .utility.active .image-box {
+    height: 300px;
+  }
+
+  .utilities-page-2 .utilities-list {
+    flex-direction: column;
+  }
+  .utilities-page-2 .utilities-list .utility {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .utilities-page-2 .utilities-list .utility .image-box {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .price-list.page {
+    height: 100%;
+  }
+  .price-list.page > .content {
+    width: 100%;
+  }
+  .price-list.page > .content .title-type-2 {
+    display: block;
+    color: #1175bb;
+  }
+  .price-list.page .price-list-box {
+    flex-direction: column;
+    height: 100%;
+  }
+  .price-list.page .price-list-box .price-box {
+    margin-bottom: 30px;
+  }
+  .price-list.page .price-list-box .price-box:nth-child(1), .price-list.page .price-list-box .price-box:nth-child(2) {
+    display: initial;
+  }
+
+  .articles-page > .title-type-1 {
+    text-transform: uppercase;
+  }
+
+  .article-details-page {
+    flex-direction: column;
+    height: 100%;
+  }
+  .article-details-page .articles-related {
+    width: 100%;
+  }
+  .article-details-page .details {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .article-details-page .details .title-type-1 {
+    color: #1175bb;
+  }
+
+  .contact-page {
+    padding: 0px;
+    height: 100%;
+  }
+  .contact-page > img {
+    position: relative;
+    height: 600px;
+  }
+  .contact-page .content {
+    padding: 0px 100px 40px;
+    width: 100%;
+    height: 100%;
+  }
+  .contact-page .content .title-type-1 {
+    padding-top: 40px;
+  }
+
+  .sign-in-page > p {
+    position: absolute;
+    bottom: 30px;
+  }
+}
+@media (max-width: 736px) {
+  .sign-in-page {
+    justify-content: space-between;
+  }
+  .sign-in-page > img {
+    height: 100%;
+  }
+  .sign-in-page .page-logo {
+    margin-bottom: 0px;
+  }
+  .sign-in-page form > span {
+    margin-top: 20px;
+  }
+  .sign-in-page form .social {
+    margin-top: 20px;
+  }
+  .sign-in-page .page-logo img {
+    transform: scale(0.9);
+  }
+  .sign-in-page > p {
+    position: initial;
+  }
+}
+@media (max-width: 540px) {
+  .padding {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .navigation.active li {
+    margin-left: 40px;
+  }
+  .navigation.active li:last-child {
+    margin-left: 40px;
+  }
+
+  .banner-home {
+    height: 300px;
+  }
+  .banner-home .content .title-type-1 {
+    font-size: 48px;
+    line-height: 69px;
+  }
+
+  .utility-home-1 {
+    margin-top: 100px;
+  }
+
+  .banner-utilities-page {
+    padding: 0px;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+  }
+  .banner-utilities-page .img-banner {
+    position: relative;
+    height: 250px;
+    margin-bottom: 30px;
+  }
+  .banner-utilities-page .img-banner .title-type-1.res {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 40px;
+    display: block;
+    font-size: 30px;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  }
+  .banner-utilities-page .content {
+    padding: 0px 40px;
+    width: 100%;
+    text-align: center;
+  }
+  .banner-utilities-page .content .line {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .banner-utilities-page .content .button-utilities-page {
+    display: none;
+  }
+
+  .utilities-page-1 .utility .image-box {
+    height: 200px;
+  }
+
+  .utilities-page-2 .utilities-list {
+    margin-bottom: 50px;
+  }
+
+  .price-list.page {
+    margin-top: 50px;
+    padding-bottom: 30px;
+  }
+
+  .articles-page {
+    margin-bottom: 50px;
+  }
+
+  .article-details-page {
+    padding-top: 100px;
+  }
+
+  .contact-page {
+    padding: 0px;
+  }
+  .contact-page .content {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .sign-in-page,
+.sign-up-page {
+    padding-top: 70px;
+  }
+  .sign-in-page > img,
+.sign-up-page > img {
+    object-fit: cover;
+    object-position: 100% 100%;
+  }
+  .sign-in-page .page-logo,
+.sign-up-page .page-logo {
+    transform: scale(1);
+  }
+  .sign-in-page form,
+.sign-up-page form {
+    padding-left: 17.5px;
+    padding-right: 17.5px;
+  }
+  .sign-in-page form > p,
+.sign-up-page form > p {
+    margin-top: 30px;
+  }
+  .sign-in-page form .social,
+.sign-up-page form .social {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 414px) {
+  .price-list .price-list-box {
+    height: 580px;
+  }
+
+  .sign-in-page .page-logo img:nth-child(1) {
+    width: 100%;
+  }
+}
+@media (max-width: 375px) {
+  .padding {
+    padding-left: 17.5px;
+    padding-right: 17.5px;
+  }
+
+  .navigation.active li {
+    margin-left: 17.5px;
+  }
+  .navigation.active li:last-child {
+    margin-left: 17.5px;
+  }
+
+  .banner-utilities-page {
+    padding: 0px;
+  }
+  .banner-utilities-page .img-banner .title-type-1.res {
+    font-size: 24px;
+    right: 17.5px;
+  }
+  .banner-utilities-page .content {
+    padding: 0px 17.5px;
+  }
+
+  .contact-page {
+    padding: 0px;
+  }
+  .contact-page .content {
+    padding-left: 17.5px;
+    padding-right: 17.5px;
+  }
+
+  .sign-in-page,
+.sign-up-page {
+    padding-top: 70px;
+  }
+  .sign-in-page form input[type=submit],
+.sign-up-page form input[type=submit] {
+    width: 100%;
+  }
+}
+@media (max-width: 320px) {
+  footer .sign-up-footer {
+    height: 380px;
+  }
+  footer .sign-up-footer > img {
+    height: 380px;
+  }
+  footer .sign-up-footer form div input {
+    padding-left: 30px;
+  }
+
+  .user-res img:nth-child(1) {
+    width: 30px;
+    height: 30px;
+  }
+  .user-res img:nth-child(2) {
+    margin-left: 10px !important;
+  }
+
+  .sign-in-page .page-logo,
+.sign-up-page .page-logo {
+    transform: scale(0.9);
+  }
+  .sign-in-page form,
+.sign-up-page form {
+    width: 290px;
+  }
+  .sign-in-page form input[type=submit],
+.sign-up-page form input[type=submit] {
+    width: 250px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .sign-in-page p,
+.sign-up-page p {
+    display: inline-block;
+    width: 250px;
+  }
+}
+@media (max-width: 280px) {
+  .user-res img:nth-child(1) {
+    display: none;
+  }
+  .user-res img:nth-child(2) {
+    margin-left: 10px !important;
+  }
+
+  .price-list .price-list-box {
+    height: 620px;
+  }
+
+  footer .sign-up-footer {
+    height: 400px;
+  }
+  footer .sign-up-footer > img {
+    height: 400px;
+  }
+}
 
 /*# sourceMappingURL=responsive.css.map */
